# http_cli

./: README.md  example_usage.py  pyproject.toml
example/: README.md  example_usage.py  package-lock.json  package.json
http_cli/: http_interactions.py  manage_processes.py
http_text_cli/: __init__.py  http_interactions.py  manage_processes.py
integration_tests/: config.httpcli
integration_tests/hello_world/: request_url.txt  response_headers.httpcli  stdout.httpcli
