[build-system]
requires = ["setuptools>=61.0", "requests"]
build-backend = "setuptools.build_meta"

[project]
name = "http_cli"
version = "1.0.0"
authors = [
  { name="Emily Bache", email="emily@bacheconsulting.com" },
]
description = "Turns an HTTP (REST) api into a command line script you can test with TextTest"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/texttest/http_cli"
"Bug Tracker" = "https://github.com/texttest/http_cli/issues"
